<resources>
    <string name="app_name">Layouts</string>
    <string name="which_layout">Which layout do you want to see?</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="exercise_3">Exercise 3</string>
    <string name="exercise_2">Exercise 2</string>
    <string name="exercise_4">Exercise 4</string>
    <string name="exercise_5">Exercise 5</string>
    <string name="details">Details</string>
    <string name="wim_hambrouck" translatable="false">Wim Hambrouck</string>
    <string name="docent">Lecturer</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="another_button">Another button</string>
    <string name="small_button">A little button</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="address">Address</string>
    <string name="housenumber">Housenumber</string>
    <string name="dob">Date of birth</string>
    <string name="account_number">Bank account number</string>
    <string name="nrn">National register number</string>
    <string name="subscribe_newsletter">I want to subscribe to the newsletter</string>
    <string name="subscribe">Subscribe</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="plus" translatable="false">+</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="zero" translatable="false">0</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="direct_debit">Direct debit</string>
    <string name="big_button">This is a big button that takes up the whole screen</string>
</resources>