<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/which_layout"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_ex1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_1" />

        <Button
            android:id="@+id/btn_ex2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_2" />

        <Button
            android:id="@+id/btn_ex3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_3" />

        <Button
            android:id="@+id/btn_ex4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_4" />

        <Button
            android:id="@+id/btn_ex5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_5" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>