<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercise2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_docent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docent" />

        <Button
            android:id="@+id/btn_wim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_docent"
            android:layout_centerHorizontal="true"
            android:text="@string/wim_hambrouck" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_wim"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_1"
            android:layout_alignEnd="@id/btn_wim"
            android:layout_alignRight="@id/btn_wim"
            android:text="@string/two" />


        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_2"
            android:layout_toStartOf="@id/btn_2"
            android:layout_toLeftOf="@id/btn_2"
            android:text="@string/three" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>