<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Exercise4Activity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <TextView
            android:id="@+id/txt_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            app:layout_constraintBaseline_toBaselineOf="@id/edt_firstname"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <EditText
            android:id="@+id/edt_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            app:layout_constraintBaseline_toBaselineOf="@id/edt_lastname"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/edt_firstname" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintBaseline_toBaselineOf="@id/edt_address"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/edt_lastname" />

        <TextView
            android:id="@+id/txt_housenr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/housenumber"
            app:layout_constraintBaseline_toBaselineOf="@id/edt_housenr"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <EditText
            android:id="@+id/edt_housenr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/edt_address" />

        <TextView
            android:id="@+id/txt_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            app:layout_constraintBaseline_toBaselineOf="@id/edt_dob"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <EditText
            android:id="@+id/edt_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/edt_housenr" />

        <TextView
            android:id="@+id/txt_accountnr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            app:layout_constraintBaseline_toBaselineOf="@id/edt_accountnr"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <EditText
            android:id="@+id/edt_accountnr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/edt_dob" />

        <TextView
            android:id="@+id/txt_nin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nin"
            app:layout_constraintBaseline_toBaselineOf="@id/edt_nin"
            app:layout_constraintEnd_toStartOf="@id/guideline" />

        <EditText
            android:id="@+id/edt_nin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/edt_accountnr" />


        <!-- ter info: een RadioGroup gedraagt zich als een LinearLayout -->
        <RadioGroup
            android:id="@+id/grp_m_v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/edt_nin">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bank_transfer" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direct_debit" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/chk_newsletter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_newsletter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grp_m_v" />

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscribe"
            app:layout_constraintTop_toBottomOf="@id/chk_newsletter" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>